#924 create/update property trello integration details
